{
    "name": "UserInput",
    "maps": [
        {
            "name": "GamePlay",
            "id": "7d3cc353-c50d-449c-9e4e-939b94d5c050",
            "actions": [
                {
                    "name": "MouseMove",
                    "type": "Value",
                    "id": "6cd36904-ad0e-4514-a34e-ec6d0fa41097",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "MousePress",
                    "type": "Button",
                    "id": "e94a0f5d-4d37-4c94-86a7-608dcb1dfa24",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "TouchMove",
                    "type": "Value",
                    "id": "13983c09-ed57-40b7-bcff-2964e0364729",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "c57c687f-4797-41f6-a78b-8a89c57b1745",
                    "path": "<Mouse>/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MouseMove",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9fa5f3a0-dc46-407e-ad07-0b1a09bd998a",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MousePress",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "df3baeac-c65a-41ef-9ad7-02c2ab6b80c6",
                    "path": "<Touchscreen>/primaryTouch/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchMove",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}